2004-06-06  Bryce Harrington <bryce@bryceharrington.com>

	* libnrtype/nr-type-xft.cpp:  Documenting routines

2004-06-06  Ted Gould  <ted@gould.cx>

	* src/main.cpp, src/preferences-skeleton.h, src/extension/extension.cpp:

	Making it so that the extension parameters get saved in the Inkscape
	preferences.  Most people will notice that their printer gets saved now.
	But this does alot more than that.  Added an "extensions" group to the
	preferences skeleton for all these settings.  All settings get saved as
	"module ID"."param name".  Also had to change where the extensions get
	init'd in the startup to put it behind the Inkscape application so that
	prerefences could be used.

2004-06-03  Ted Gould  <ted@gould.cx>

	* src/file.cpp, src/dialog/filedialog.cpp:

	Making the whole file dialog alot more fun.  Basically, now the
	first filename will always be unique on files that don't have a
	filename already.  And, if you've selected a different default
	extension, that extension's filename extension will be placed
	on the file.  Also, when you change the extension to save with
	in the dialog, the filename extension will change with you (assuming
	that you were using filename extensions previously ofcourse).
	Finally, the checkbox to autoappend extensions is no insensitive
	when "Autodetect" is selected.

2004-06-03  MenTaLguY  <mental@rydia.net>

	* src/file.cpp, src/extension/internal/ps.cpp,
	  src/extension/internal/win32.cpp, src/sp-pattern.cpp,
	  src/dialogs/stroke-style.cpp, src/display/nr-arena-glyphs.cpp,
	  src/display/nr-arena-group.cpp, src/display/nr-arena-image.cpp,
	  src/display/nr-arena-item.cpp, src/display/nr-arena-shape.cpp,
	  src/widgets/icon.cpp, src/dialogs/nr-arena-item.h:

	  Introduced the notion of "parent" NRGCs

2004-06-02  bulia byak <bulia@users.sourceforge.net>

	* src/selection.h, src/selection.cpp:

	* preferences-skeleton.h dialogs/display-settings.cpp sp-item.cpp: New settings
	for various compensations
