@@ -1,6 +1,7 @@
 2004-06-06  Bryce Harrington <bryce@bryceharrington.com>
 
-	* libnrtype/nr-type-xft.cpp:  Documenting routines
+	* libnrtype/nr-type-xft.cpp, libnrtype/nr-font.cpp:  
+	Documenting the routines
 
 2004-06-06  Ted Gould  <ted@gould.cx>
 
